--- a/templates/roster/index.html.twig
+++ b/templates/roster/index.html.twig
@@ -69,6 +69,20 @@
         </div>
     </div>
 
+    {% if cadetsNeedPresentation is defined and is_granted('PRESENTATION') and cadetsNeedPresentation > 0 %}
+        <div class="container container-main mb-3">
+            <div class="row">
+                <div class="col-sm-12 pt-3">
+                    <div class="alert alert-warning">
+                        <span class="badge badge-pill badge-light">{{ cadetsNeedPresentation }}</span>
+                         <i class="fa fa-user-graduate text-primary" title="Cadet"></i>
+                        cadet(s) n'ont pas encore eu la <i class="fa fa-volume-up text-warning"></i> présentation de l'association
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+
     {% if selectedMap is defined and selectedMap is not null %}
         <div class="container container-main mb-3">
             <div class="row">
@@ -153,6 +167,14 @@
                                         </span>
                                         <span class="roster-text-valign">
                                             <a href="{{ path('user_view', {'user': pilot.nickname}) }}">{{ pilot.nickname }}</a>
+                                            {% if is_granted('PRESENTATION', pilot) %}
+                                                {% if pilot.needPresentation %}
+                                                    <span class="badge badge-warning badge-pill"
+                                                          title="Ce pilote a besoin d'une présentation de l'association">
+                                                        <i class="fa fa-volume-up"></i>
+                                                    </span>
+                                                {% endif %}
+                                            {% endif %}
                                         </span>
                                     </td>
                                 </tr>
