--- a/templates/recruitment/_change-for-cadet.html.twig
+++ b/templates/recruitment/_change-for-cadet.html.twig
@@ -9,7 +9,9 @@
     Je souhaite rejoindre le programme des <i class="fa fa-user-graduate text-primary"></i> Cadets de la VEAF.
     <br/>
     <br/>
-    <p>C'est un choix qui implique de voler régulièrement durant ma période d'essai.</p>
+    <p>C'est un choix qui implique de participer régulièrement aux activités de la VEAF avec d'autres membres.</p>
+    <p>Après 5 activités, nous prendrons ensemble la décision de continuer ou pas.</p>
+    <p><i>Ce choix n'est pas définitif, je peux à tout moment interrompre mon intégration.</i></p>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-dismiss="modal">
