--- a/templates/recruitment/_change-for-guest.html.twig
+++ b/templates/recruitment/_change-for-guest.html.twig
@@ -10,6 +10,7 @@
     <br/>
     <br/>
     <p>Je peux continuer à utiliser les ressources publiques de l'association.</p>
+    <p><i>Ce choix n'est pas définitif, je peux à tout moment rejoindre le programme d'intégration des cadets.</i></p>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-dismiss="modal">
