small fix (again) to remove non matching users

--- a/templates/mission-maker/index.html.twig
+++ b/templates/mission-maker/index.html.twig
@@ -55,7 +55,7 @@
                                         {% if userModule.level == constant('\\App\\Entity\\UserModule::LEVEL_INSTRUCTOR') %}
                                             <i class="fa fa-user-tie text-primary" title="Instructeur"></i>
                                         {% elseif userModule.level == constant('\\App\\Entity\\UserModule::LEVEL_MISSION') %}
-                                            <i class="fa fa-shield text-secondary" title="Mission"></i>
+                                            <i class="fa fa-shield-alt text-success" title="Mission"></i>
                                         {% elseif userModule.level == constant('\\App\\Entity\\UserModule::LEVEL_ROOKIE') %}
                                             <i class="fa fa-book-reader text-warning" title="Débutant"></i>
                                         {% else %}
